fix gap between information-element and product-element

--- a/styles/default.css
+++ b/styles/default.css
@@ -77,8 +77,8 @@ body {
 
 .brandname {
     /* font-size: 2rem; */
-    font-size: max(2.8rem, 3.5vw);
-    height: 10vh;
+    /* font-size: max(2.8rem, 3.5vw); */
+    width: 270px;
     padding: 20px 20px;
     /* margin-bottom: 5px; */
     /* width: 60%; */
@@ -86,8 +86,11 @@ body {
     /* background-color: hsla(0,0%,100%,.4); */
     /* display: inline; */
     /* border-radius: 15px; */
-    color: white;
+    /* color: white; */
 
+}
+.brandname img{
+    width: 100%;
 }
 .info-hero {
     display: flex;
@@ -170,12 +173,22 @@ body {
     background-color: var(--btn-color-40);
     /* color: var(--main-color); */
 }
+.block-head {
+    position: relative;
+    /* background-color: green; */
+    /* padding: 200px 0; */
+    height: calc(350px - 15vw);
+    
+}
 .product {
     position: relative;
-    top: 2320px;
+    /* top: 2320px;
+    margin-bottom: 2320px; */
+    top: calc(3020px - 75vw);
+    margin-bottom: 2620px;
     background-color: var(--secondary-color);
-    margin-bottom: 2320px;
     /* cursor: pointer; */
+    /* z-index: 2; */
 }
 .product-title {
     font-size: 2.5rem;
